--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-      - SPRING_DATA_MONGODB_URI=mongodb://app:1234567890@mongo:27017/ChaoLongTool?authSource=ChaoLongTool
+      - SPRING_DATA_MONGODB_URI=mongodb://app:l@c123@mongo:27017/ChaoLongTool?authSource=ChaoLongTool
     ports:
       - "80:8080"
     depends_on:
@@ -13,6 +13,9 @@ services:
 
   mongo:
     image: mongo:7
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=l@c123
     volumes:
       - ./mongo-data:/data/db
     restart: unless-stopped
