--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=${PORT:8080}
 spring.application.name=food-ordering-app
 foodorder.default.tableCount=10
 foodorder.default.seatCountPerTable=4
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
